Optimisation: threads treatments, refactoring, update gui, there is still a bug that does not happen all the time for vehicles, addVehiclesPeriodically work but not displayed for reasons